  A Czech translation was provided by Pavel Kosina.  A French
  translation was provided by David Larlet.
  
* Added a distutils command `build_sphinx`: When Sphinx is installed,
  you can call ``python setup.py build_sphinx`` for projects that
  have Sphinx documentation, which will build the docs and place them
  in the standard distutils build directory.

* ``SerializingHTMLBuilder`` was added as new abstract builder that
  can be subclassed to serialize build HTML in a specific format.
  The ``PickleHTMLBuilder`` is a concrete subclass of it that uses
  pickle as serialization implementation.

* ``JSONHTMLBuilder`` was added as another ``SerializingHTMLBuilder``
  subclass that dumps the generated HTML into JSON files for further
  processing.

* The `automodule` directive now supports the ``synopsis``,
  ``deprecated`` and ``platform`` options.

* The HTML builders have two additional attributes now that can be
  used to disable the anchor-link creation after headlines and
  definition links.

* sphinx.doc.autodoc has a new event ``autodoc-process-signature``
  that allows tuning function signature introspection.

* Glossary entries are now automatically added to the index.

* ``Sphinx.add_node()`` now takes optional visitor methods for the
  HTML, LaTeX and text translators; this prevents having to manually
  patch the classes.

* Added ``Sphinx.add_javascript()`` that adds scripts to load in the
  default HTML template.

* Added new events: ``env-updated``, ``missing-reference``,
  ``build-finished``.


Release 0.4.2 (Jul 29, 2008)
============================

* Fix rendering of the ``samp`` role in HTML.

* Fix a bug with LaTeX links to headings leading to a wrong page.

* Reread documents with globbed toctrees when source files are
  added or removed.

* Add a missing parameter to PickleHTMLBuilder.handle_page().

* Put inheritance info always on its own line.

* Don't automatically enclose code with whitespace in it in quotes;