@@ -60,6 +60,8 @@ today_fmt = '%B %d, %Y'
 # for source files.
 exclude_trees = ['_build']
 
+keep_warnings = True
+
 # If true, '()' will be appended to :func: etc. cross-reference text.
 #add_function_parentheses = True
 
